[gd_scene load_steps=2 format=1]

[ext_resource path="res://Editor.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1023.0
margin/bottom = 529.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Init" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 541.0
margin/right = 57.0
margin/bottom = 561.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Init"
flat = false

[node name="Run" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = 540.0
margin/right = 131.0
margin/bottom = 560.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Run"
flat = false

[node name="Finalize" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 156.0
margin/top = 539.0
margin/right = 217.0
margin/bottom = 559.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Finalize"
flat = false

[node name="Output" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 246.0
margin/top = 542.0
margin/right = 286.0
margin/bottom = 556.0
text = "N/A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="Init" to="." method="_on_Init_button_down"]

[connection signal="button_down" from="Run" to="." method="_on_Run_button_down"]

[connection signal="button_down" from="Finalize" to="." method="_on_Finalize_button_down"]


